respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Program_Line__c.object
<CustomObject>
    <fields>
        <fullName>Buy_Amount__c</fullName>
        <formula>IF(Ship_Prog_Buy_Price__c&gt;= 0 ,MAX (Ship_Prog_Buy_Price__c * Units__c, IF((ISNULL(Ship_Prog_Buy_Price__c)== true) || (Ship_Prog_Buy_Price__c = 0), 0, Min_Amount__c ) ), MIN (Ship_Prog_Buy_Price__c* Units__c, IF((ISNULL(Ship_Prog_Buy_Price__c )== true) || (Ship_Prog_Buy_Price__c = 0), 0, - Min_Amount__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buy_Rate__c</fullName>
        <formula>Service_Rate_Name__r.Buy_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments_Service_Line__c</fullName>
        <label>Comments Service Line</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <formula>Service_Rate_Name__r.Container_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Container Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Currency_Header__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Currency Header</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Charge__c</fullName>
        <label>Discount Charge</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inbound_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inbound Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Warehouse Charges</relationshipLabel>
        <relationshipName>Warehouse_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Min_Amount__c</fullName>
        <label>Min Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>TEXT(Service_Rate_Name__r.Rate_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUM_Cost_Allocated__c</fullName>
        <label>SUM Cost Allocated</label>
        <summarizedField>Ship_Service_Consol__c.Cost_Allocated__c</summarizedField>
        <summaryForeignKey>Ship_Service_Consol__c.Shipments_Program_Service_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sell_Amount__c</fullName>
        <formula>Sell_Gross_Amount__c * (1 - Discount_Charge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Amount_header_currency__c</fullName>
        <formula>Sell_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Net Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Gross_Amount__c</fullName>
        <formula>MAX(Ship_Prog_Sell_Price__c * Units__c , Min_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Rate__c</fullName>
        <formula>Service_Rate_Name__r.Fee_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Profit__c</fullName>
        <formula>Sell_Amount__c - Buy_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Category__c</fullName>
        <formula>TEXT(Service_Rate_Name__r.Fee_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Name</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Shipments Program Service Lines</relationshipLabel>
        <relationshipName>Shipment_Program_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Prog_Buy_Price__c</fullName>
        <label>Ship. Prog. Buy Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Prog_Sell_Net_Price__c</fullName>
        <formula>Ship_Prog_Sell_Price__c * (1- Discount_Charge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship. Prog. Sell Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Prog_Sell_Price__c</fullName>
        <label>Ship. Prog. Sell Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipments_Program__c</fullName>
        <label>Shipments Program</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipName>Shipment_Program_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Std_Buy_Amount_header_currency__c</fullName>
        <formula>Buy_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Shipments Program Service Line</label>
    <nameField>
        <label>Ship. Prog. Service Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments Program Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>